css/styles.css
@import './buttons.css';

body {
    background-color: #F5C2EC;
    font-family:Arial, Helvetica, sans-serif;
}
.wrapper {
    max-inline-size: 900px;
    margin: auto;
}
.player {
    margin-block-start: 100px;
    /* border: 10px solid red; */
    position: relative;
}
.player video {
    inline-size: 100%;
    aspect-ratio: 16/9;
    vertical-align: middle;
    /* se aplica al valor de las imagenes. La imagen se expande un poco más para llenar la proporción de 16/9 */
    object-fit: cover;
    
}
.player-title {
    color:white;
    position: absolute;
    inset-block-start: 0;
    inset-inline-start: 20px;
}
.player-actions {
    position: absolute;
    inset: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    /*  espacio entre elementos */
    gap: 20px;
    /* z-index: 2;  PARA PONER ADELANTE EL VIDEO*/
}
.player-progress {
    /* background: yellow; */
    position: absolute;
    inset-block-end: 0;
    inset-inline: 0;
    display: flex;
    padding: 10px;
}
.player-progress input {
    flex: 1;
}

.player-overlay {
    position: absolute;
    /* para que los botones se expandan hacia los extremos */
    inset: 0;
    opacity: 0;
    transition: .3s opacity;
}

.player:hover .player-overlay {
    opacity: 1;
}

